fix : made changes to controller and service implementation